tests/ui/use/use-mod/use-mod-3.stderr
error[E0603]: module `bar` is private
  --> $DIR/use-mod-3.rs:1:10
   |
LL | use foo::bar::{
   |          ^^^ private module
   |
note: the module `bar` is defined here
  --> $DIR/use-mod-3.rs:9:5
   |
LL |     mod bar { pub type Bar = isize; }
   |     ^^^^^^^

error[E0603]: module `bar` is private
  --> $DIR/use-mod-3.rs:4:10
   |
LL | use foo::bar::{
   |          ^^^ private module
   |
note: the module `bar` is defined here
  --> $DIR/use-mod-3.rs:9:5
   |
LL |     mod bar { pub type Bar = isize; }
   |     ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
